--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,4 +33,12 @@
         android:onClick="onClickBtnVersion"
         android:text="@string/MenuBtn_Version" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/MenuBtn_Setting"
+        android:id="@+id/btnSetting"
+        android:layout_below="@+id/btnRanking"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
