--- a/app/src/main/res/layout/content_user_email_update.xml
+++ b/app/src/main/res/layout/content_user_email_update.xml
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:ems="10"
-                android:id="@+id/editOldEmail" />
+                android:id="@+id/edtOldEmail" />
         </LinearLayout>
 
         <LinearLayout
