--- a/app/src/main/res/layout/activity_add_travel_word.xml
+++ b/app/src/main/res/layout/activity_add_travel_word.xml
@@ -18,8 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/TravelWordAddLlb_Title"
-            android:id="@+id/textView9" />
+            android:text="@string/TravelWordAddLlb_Title" />
 
         <Spinner
             android:layout_width="match_parent"
@@ -27,12 +26,16 @@
             android:entries="@array/TravelWordSpr_Category"
             android:id="@+id/sprTravelWordCategory" />
 
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:id="@+id/imageView" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/TravelWordAddLlb_Cutline"
-            android:id="@+id/textView10" />
+            android:text="@string/TravelWordAddLlb_Cutline" />
 
         <EditText
             android:layout_width="match_parent"
@@ -42,7 +45,13 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@string/TravelWordAddBtn_Gallery"
+            android:onClick="onClickGallery" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="@string/TravelWordAddBtn_Submit"
-            android:id="@+id/btnTravelWordAdd" />
+            android:onClick="onClickTravelWordAdd" />
     </LinearLayout>
 </RelativeLayout>
