--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,42 +10,45 @@
 
     <Button
         android:id="@+id/btnMap"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/MainActivity_MenuButton"
         android:layout_marginTop="16dp"
         android:onClick="onClickBtnMap"
         android:text="@string/MenuBtn_Map" />
 
     <Button
         android:id="@+id/btnRanking"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/MainActivity_MenuButton"
         android:onClick="onClickBtnRanking"
         android:layout_below="@+id/btnMap"
         android:text="@string/MenuBtn_Ranking" />
 
     <Button
         android:id="@+id/Button01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/MainActivity_MenuButton"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/btnRanking"
         android:onClick="onClickBtnVersion"
         android:text="@string/MenuBtn_Version" />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/MainActivity_MenuButton"
         android:text="@string/MenuBtn_TravelDictionary"
         android:id="@+id/btnTravelDictionary"
         android:layout_below="@+id/btnRanking"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/MainActivity_MenuButton"
         android:text="@string/MenuBtn_Setting"
         android:id="@+id/btnSetting"
-        android:layout_below="@+id/btnTravelDictionary"
+        android:layout_below="@+id/btnRating"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        style="@style/MainActivity_MenuButton"
+        android:text="@string/MenuBtn_Rating"
+        android:layout_below="@+id/btnTravelDictionary"
+        android:layout_centerHorizontal="true"
+        android:onClick="onClickBtnRating"
+        android:id="@+id/btnRating"/>
 </RelativeLayout>
