--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,6 +26,15 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+
+    <style name="RankingListItemFontRemark">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#000080</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:paddingLeft">20dp</item>
+    </style>
+
     <style name="RankingTitle">
         <item name="android:gravity">center</item>
         <item name="android:textSize">30sp</item>
@@ -48,7 +57,7 @@
     </style>
 
     <style name="RankingListItemFontTitle">
-        <item name="android:textSize">24sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textColor">#000080</item>
         <item name="android:paddingTop">5dp</item>
         <item name="android:paddingBottom">5dp</item>
@@ -56,12 +65,86 @@
         <item name="android:paddingLeft">20dp</item>
     </style>
 
-    <style name="RankingListItemFontRemark">
-        <item name="android:textSize">20sp</item>
+    <style name="RankingListItemFontAddress">
+        <item name="android:textSize">18sp</item>
         <item name="android:textColor">#000080</item>
         <item name="android:paddingBottom">5dp</item>
         <item name="android:paddingRight">20dp</item>
         <item name="android:paddingLeft">20dp</item>
     </style>
 
+    <style name="RankingListItemFontCount">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#000080</item>
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="TitleStyle">
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">#DAA520</item>
+        <item name="android:background">#FFFAFA</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:layout_marginBottom">20dp</item>
+    </style>
+
+
+
+    <!--  Rating Style  -->
+    <style name="RatingColor">
+        <item name="android:background">#FFFAFA</item>
+    </style>
+
+    <style name="LayoutStyle" parent="RatingColor">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:layout_marginTop">1dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+    </style>
+
+    <style name="RatingTitle" parent="LayoutStyle">
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">#DAA520</item>
+    </style>
+
+    <style name="RatingSubmitButton" parent="LayoutStyle">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#DAA520</item>
+        <item name="android:background">#FFFAFA</item>
+    </style>
+
+    <style name="RatingTableRow" parent="RatingColor">
+        <item name="android:padding">10dp</item>
+        <!--<item name="android:paddingTop">10dp</item>-->
+        <!--<item name="android:paddingBottom">10dp</item>-->
+        <!--<item name="android:paddingRight">10dp</item>-->
+        <!--<item name="android:paddingLeft">10dp</item>-->
+    </style>
+
+    <style name="RatingLabel">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#DAA520</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
+
+
+
+    <!-- MainActivity -->
+    <style name="MainActivity_MenuButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+
+    </style>
 </resources>
